--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
